# MouseKeepAlive

./: CMakeLists.txt  partitions.csv  sdkconfig.defaults
Documents/: FSD.md  project-idea.md
components/dns_server/: dns_server.c
main/: CMakeLists.txt  app_main.c  ble_nus.c  ble_nus.h  cmd_handler.c  cmd_handler.h  http_server.c  http_server.h  nvs_store.c  nvs_store.h  ota_update.c  ota_update.h  portal.html  udp_log.c  wifi_prov.c
